--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "eslint-config-next": "13.5.1",
     "framer-motion": "^11.0.3",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
